# usda-data-acquisition

./: .gitignore  Cargo.toml  README.md
config/: datamart.toml  legacy.toml
src/: common.rs  datamart.rs  esmis.rs  legacy.rs  main.rs  noaa.rs
src/integration/: mod.rs  noaa.rs  usda.rs
src/noaa/: mod.rs
src/usda/: datamart.rs  esmis.rs  legacy.rs  mars.rs  mod.rs
