[package]
name = "data-acquisition"
version = "0.1.0"
authors = ["Matthew Scheffel <mscheffel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
chrono = "0.4"
lazy_static = "1.4"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
walkdir = "2"
ureq = {version = "1.3", features = ["json"]}